fixed contrast errors

--- a/bountifulfoods_siteplan/styles/site-plan.css
+++ b/bountifulfoods_siteplan/styles/site-plan.css
@@ -128,14 +128,16 @@ body{
     margin-top: 30px;
 }
 .footer a{
-    color: white;
+    color: #000000;
     padding: 30px;
     font-size: 20px;
     text-decoration: none;
+    font-weight: bold;
 }
 .footer a:hover{
     background-color: #0082e6;
     letter-spacing: .3px;
+    color: #ffffff;
 }
 .palette{
     color: #000000;
